--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'F206'
 - !lcsh 'Georgia -- Description and travel'
+- GITenberg
 title: 'Georgia: Its History, Condition and Resources'
 url: http://www.gutenberg.org/ebooks/48868
